# cypd

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cypd.pyx  libpd.pxd  libpd.pyx  pyproject.toml  setup.py
.github/workflows/: build.yml
scripts/: setup.sh
src/cypd/: __init__.py  _audio.pyx  _libpd.pyx  libminiaudio.pxd  libpd.pxd
tests/: test_atom.py  test_cypd.py  test_patches.py
